# 2016fa_ece408_project

./: .docker-repository.yml  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.txt  model_test.cpp  model_test.py  rai-build.yml  test100.hdf5  test99.hdf5
cmake/modules/: FindEnableCXX11.cmake  FindEnableCxx11.cmake
src/: main.cpp  main.cu  range.hpp  sugar.cmake  utils.hpp
